Changed getResourceFileAsList to return empty list on empty file